--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<Link Rel='Stylesheet' Href='Library/UI/Components/Buttons/Text.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Fonts.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'>
+		<Link Rel='Stylesheet' Href='Common.css'>
 		<Link Rel='Stylesheet' Href='Style.css'>
 
 		<Link Rel='Preconnect' Href='https://fonts.googleapis.com'>
