--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<HTML AutoLayout Direction='Vertical' Width='Fill' Height='Fill'>
+<HTML AutoLayout Direction='Vertical' Width='Fill' Height='Fill' Lang='ru-RU'>
 	<Head>
 		<Title>Введение в соревновательный Counter-Strike</Title>
 
@@ -23,7 +23,7 @@
 
 	<Body AutoLayout Direction='Vertical' Width='Fill' Height='Fill'>
 		<Header AutoLayout Direction='Horizontal' Width='Fill' Height='Fit' AlignX='End'>
-			<A Href='Autors'>Авторы</A>
+			<A Href='Authors'>Авторы</A>
 		</Header>
 
 		<Main AutoLayout Direction='Vertical' Width='Fill' Height='Fill' AlignX='Center' AlignY='Center'>
