--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Fonts.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'>
 		<Link Rel='Stylesheet' Href='Common.css'>
-		<Link Rel='Stylesheet' Href='Style.css'>
+		<Link Rel='Stylesheet' Href='index.css'>
 
 		<Link Rel='Preconnect' Href='https://fonts.googleapis.com'>
 		<Link Rel='Preconnect' Href='https://fonts.gstatic.com' Crossorigin>
