--- a/Authors.html
+++ b/Authors.html
@@ -61,7 +61,7 @@
 						</Div>
 					</Div>
 					<Div Class='Description'>
-						Живёт в Петербурге. Начал играть в 2017-ом году, с 2019 по 2021 год проживал в Counter-Strike’е. Получив большое количество опыта, принял решение поделится им и создать это практическое пособие. Мало спит. В свободное время читает книги.
+						Живёт в Петербурге. Начал играть в 2016-ом году, с 2019 по 2020 год проживал в Counter-Strike’е. Прошёл путь от отдыха с друзьями до зависимости, мешающей жить и учиться, и обратно. Старается получать удовольствие от игры и применять профессиональный подход. Немного разбирается в паттернах проектирования и ООП.
 					</Div>
 				</Div>
 			</Div>
