--- a/Authors.html
+++ b/Authors.html
@@ -41,7 +41,7 @@
 			<Div Class='Authors' AutoLayout Direction='Vertical'>
 				<Div Class='Author' AutoLayout Direction='Vertical'>
 					<Div Class='Header' AutoLayout Direction='Horizontal'>
-						<Img Src='https://sun9-83.userapi.com/s/v1/if2/RWgBuZRPxq5yv5JO-alvIxMDNnxJNXEUsZqTcxTgmiOZNyawxnjUohcqW3772PQFPi6nmapYjageLR4jvBjHmBcq.jpg?size=2048x2048&quality=95&type=album'>
+						<Img Style='--Fallback: #160F38' Src='https://sun9-83.userapi.com/s/v1/if2/RWgBuZRPxq5yv5JO-alvIxMDNnxJNXEUsZqTcxTgmiOZNyawxnjUohcqW3772PQFPi6nmapYjageLR4jvBjHmBcq.jpg?size=2048x2048&quality=95&type=album'>
 						<Div AutoLayout Direction='Vertical'>
 							<Div Class='Name'>Владимир Сунцов</Div>
 							<Div Class='Description'>Основатель, редактор</Div>
@@ -54,7 +54,7 @@
 
 				<Div Class='Author' AutoLayout Direction='Vertical'>
 					<Div Class='Header' AutoLayout Direction='Horizontal'>
-						<Img Src='https://lh3.googleusercontent.com/a-/AOh14Ghr8YoItkUBduFSNgxCIfJdp9Gup1GXb5GlNeLWXw8'>
+						<Img Style='--Fallback: #5B2A24' Src='https://lh3.googleusercontent.com/a-/AOh14Ghr8YoItkUBduFSNgxCIfJdp9Gup1GXb5GlNeLWXw8'>
 						<Div AutoLayout Direction='Vertical'>
 							<Div Class='Name'>Арсений Круглов</Div>
 							<Div Class='Description'>Web-разработчик, редактор, сооснователь</Div>
