--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 					</Div>
 
 					<A Href='Article' Class='Text Main'>Читать</A>
-					</Span></Div>
+				</Span>
+			</Div>
 		</Main>
 	</Body>
 </HTML>
