--- a/Article.html
+++ b/Article.html
@@ -14,6 +14,7 @@
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Fonts.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Components/HR.css'>
+		<Link Rel='Stylesheet' Href='Library/UI/Components/Icon/custom-icon.css'>
 		<Link Rel='Stylesheet' Href='Common.css'>
 		<Link Rel='Stylesheet' Href='Article.css'>
 
@@ -23,10 +24,15 @@
 	</Head>
 
 	<Body AutoLayout Direction='Vertical' Width='Fill' Height='Fill' AlignX='Center'>
-		<Header AutoLayout Direction='Vertical' Width='Fill' Height='Fit'>
-			<A Href='Contents' AutoLayout Direction='Horizontal' AlignY='Center' Class='Text Gray'>
-				<SVG height='24px' viewBox='0 0 24 24' width='24px'><path d='M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z'/></SVG>
+		<Header AutoLayout Direction='Horizontal' Width='Fill' Height='Fit' Packing='Space between'>
+			<A Href='Contents' AutoLayout Direction='Horizontal' AlignY='Center' Class='Text Icon'>
+				<custom-icon Icon='Receipt Long'></custom-icon>
 				<Span>Оглавление</Span>
+			</A>
+
+			<A Href='Contents' AutoLayout Direction='Horizontal' AlignY='Center' Class='Text Icon'>
+				<custom-icon Icon='List'></custom-icon>
+				<Span>Содержание</Span>
 			</A>
 		</Header>
 
@@ -166,4 +172,6 @@
 			</Div>
 		</Article>
 	</Body>
+
+	<Script Src='Library/UI/Components/Icon/custom-icon.js'></Script>
 </HTML>
