--- a/Article.html
+++ b/Article.html
@@ -10,11 +10,12 @@
 
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/AutoLayout.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'>
-		<Link Rel='Stylesheet' Href='Library/UI/Components/Buttons/Text.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Fonts.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'>
 		<Link Rel='Stylesheet' Href='Library/UI/Components/HR.css'>
-		<Link Rel='Stylesheet' Href='Library/UI/Components/Icon/custom-icon.css'>
+		<Link Rel='Stylesheet' Href='Library/UI/Components/Icon/Icon.css'>
+		<Link Rel='Stylesheet' Href='Library/UI/Components/Buttons/Text.css'>
+		<Link Rel='Stylesheet' Href='Library/UI/Components/Buttons/Cursor.css'>
 		<Link Rel='Stylesheet' Href='Common.css'>
 		<Link Rel='Stylesheet' Href='Article.css'>
 
@@ -25,153 +26,65 @@
 
 	<Body AutoLayout Direction='Vertical' Width='Fill' Height='Fill' AlignX='Center'>
 		<Header AutoLayout Direction='Horizontal' Width='Fill' Height='Fit' Packing='Space between'>
-			<A Href='Contents' AutoLayout Direction='Horizontal' AlignY='Center' Class='Text Icon'>
-				<custom-icon Icon='Receipt Long'></custom-icon>
+			<Button Class='Text Icon'>
+				<Custom-icon Icon='Receipt Long'></Custom-icon>
 				<Span>Оглавление</Span>
-			</A>
+			</Button>
 
-			<A Href='Contents' AutoLayout Direction='Horizontal' AlignY='Center' Class='Text Icon'>
-				<custom-icon Icon='List'></custom-icon>
+			<Button Class='Text Icon'>
+				<Custom-icon Icon='List'></Custom-icon>
 				<Span>Содержание</Span>
-			</A>
+			</Button>
 		</Header>
 
 		<Article AutoLayout Direction='Vertical' Width='Fit' Height='Fill'>
-			<H1>Черные дыры и нейтронные звезды в осциллирующей вселенной</H1>
+			<H1>Коммуникация</H1>
 
 			<P Class='Introduction'>
-				В последние годы вновь активно рассматриваются гипотезы о возможной цикличности Вселенной.
-				В этих космологических теориях Вселенная, вместо «одноразового» бесконечного расширения,
-				периодически сжимается до какого-то объема, а потом снова испытывает Большой Взрыв. Одной из
-				проблем для циклической Вселенной является ее совместимость с обширной популяцией неразрушимых
-				черных дыр, накапливающихся из цикла в цикл. В статье рассматривается простая итерационная
-				модель эволюции черных дыр в циклической Вселенной, не зависящая от конкретных космологических
-				теорий. Модель имеет два свободных параметра, определяющих итерационное уменьшение числа
-				черных дыр и увеличение их индивидуальной массы. Показано, что данная модель при широких
-				вариациях параметров объясняет наблюдаемое количество сверхмассивных черных дыр в центрах
-				галактик, а также соотношения между различными классами черных дыр. Механизм накопления
-				реликтовых черных дыр при многократных пульсациях Вселенной может отвечать за популяцию
-				черных дыр, обнаруженную при наблюдениях LIGO и, вероятно, отвечающую за феномен темной
-				материи. Количество черных дыр промежуточных масс соответствует числу шаровых скоплений и
-				карликовых галактик-спутников. Эти результаты служат доводом в пользу моделей осциллирующей
-				Вселенной, и одновременно накладывают на них существенные требования. Модели пульсирующей
-				Вселенной должны характеризоваться высоким уровнем реликтового гравитационного излучения,
-				порождаемого в момент максимальных сжатий Вселенной и массовых слияний черных дыр, а также
-				решать проблему существования самой крупной черной дыры, которая образуется в ходе этого
-				слияния. Высказана гипотеза, что часть нейтронных звезд может сохраниться с прошлых циклов
-				Вселенной и внести вклад в темную материю. Эти реликтовые нейтронные звезды будут иметь
-				совокупность признаков, по которым их можно отличить от нейтронных звезд, родившихся в текущем
-				цикле рождения Вселенной. Обсуждаются наблюдательные признаки реликтовых нейтронных звезд и
-				возможность их поиска в разных диапазонах длин волн.
+				Коммуникация является уникальным навыком, который дает огромное преимущество в игре. Counter-Strike объединяет совершенно разных людей: неважно какое у тебя мировоззрение, психотип, характер, статус в обществе. Ты можешь на равных общаться со всеми. Начав поиск очередного матча на Faceit’e, в MM’e или на любой другой платформе, Вы задумывались кого вы повстречается сегодня? Будет ли это гений Counter-Strike или же обычный игрок – неважно. Он становиться вашим товарищем на какое-то неопределенное время, Вы становитесь одним механизмом в игре, который может привести вас к победе или к поражению.
 			</P>
 
 			<HR>
 
 			<Div Class='Authors' AutoLayout Direction='Horizontal'>
-				<Div>Н. Н. Горькавый</Div>
-				<Div>С. А. Тюльбашев</Div>
+				<Div>В. А. Сунцов</Div>
 			</Div>
 
 			<HR>
 
 			<Div Class='Body'>
-				<H2>1. Введение</H2>
-				<P>
-					Черные дыры являются одной из главных компонент Вселенной. Хорошо известно, что черные
-					дыры звездных масс (Stellar Black Holes, SBH)
-					с массой меньше 100 M⊙ образуются в процессе
-					звездной эволюции. Количество SBH, возникших
-					во Вселенной после Большого Взрыва, по рассчетам должно составлять около 0.1% от общего
-					количества звезд 1023, что составляет 1020 SBH
-					(Cherepashchuk 2014).
+				<H2>На что стоит обращать внимание</H2>
+
+				<UL>
+					<LI>
+						Коммуникация. Основа коммуникации - это передача информации от одного человека к другому, один из способов доведения человеком до других людей идей, фактов, мыслей, чувств и ценностей. Цель коммуникации - добиться от принимающей стороны точного понимания отправленного сообщения.
+					</LI>
+					<LI>
+						Недопонимание. Сколько примеров проигранных раундов, а впоследствии и проигранных игр из-за того, что товарищ не понял вас или же Вы его. Главное помнить, что недопонимание с чьей-либо стороны - это нормально. Важно уметь слушать вашего товарища по команде.
+					</LI>
+					<LI>
+						Уметь слушать — это искусство. Многим из нас общение c людьми дается нелегко… Но Counter-Strike учит нас бороться с трудностями и перешагивать свои страхи. Благодаря умению четко выражать свои мысли, мы можем добиться победы не только в раунде, но и в игре. Но не стоит забывать об еще одном важном аспекте - умение слушать. Важно всегда слушать вашего товарища, что он хочет от вас и как он готов помогать вам, ради вашей общей победы.
+					</LI>
+					<LI>
+						Болтовня - стремительный путь к поражению. Самая большая ошибка, которую Вы только можете допустить в игре. Болтовня мешает слушать ваши мысли, игру, мысли товарищей, но еще и мешает сфокусироваться на команде или на своей индивидуальные игре. Запомните главное, говорите только по существу или Вы придете к поражению в игре.
+					</LI>
+					<LI>
+						Гробовая тишина. Тишина в вашей игре - это еще один стремительный путь к поражению. Причин почему человек молчит может быть много: Плохое настроение, самочувствие, чувство собственной важности или стиль игры - неважно.  Если люди в вашей команде молчат, то ваша задача стать инициатором вашей коммуникации. Даже если товарищи вас не слушают и вам кажется, что всем все равно, превозмогайте себя и идите до конца.
+					</LI>
+				</UL>
+
+				<P Class='Highlighted'>
+					Текст текс текст текст текст
 				</P>
-				<P>
-					В своей фундаментальной книге Нобелевский
-					лауреат Peebles (1993) начинает раздел об осциллирующей Вселенной утверждением, что до теории
-					инфляции наиболее популярной космологической
-					моделью являлась модель Леметра о Вселенной-фениксе, которая разлетается после коллапса
-					предыдущей фазы периодической Вселенной.
-					Отметим, что впервые вопрос о циклической
-					Вселенной в рамках теории Эйнштейна был
-					рассмотрен А. А. Фридманом в его знаменитой
-					работе 1922 года. Период с 1922 до 1980-х
-					годов можно назвать временем доминирования
-					классической модели осциллирующей Вселенной.
-				</P>
-				<P>
-					Несмотря на большую увлеченность последних
-					десятилетий квантовой теорией одноразовой Вселенной,
-					осциллирующие космологические модели
-					сейчас снова привлекают большое внимание (cм.
-					обзоры Brandenberger and Peter 2017, Novello
-					and Bergliaffa 2008). Отметим периодическую
-					модель еще одного нобелевского лауреата Penrose
-					(2011), а также теорию (Steinhardt and Turok
-					2002). Но в моделях осциллирующих Вселенной
-					редко учитывается существование многочисленной
-					популяции черных дыр. А ведь на каждом цикле
-					Вселенной существует постоянный приток черных
-					дыр из-за взрывов сверхновых. Эти черные дыры
-					неразрушимы и должны накапливаться от цикла
-					к циклу, как и энтропия (сверхмассивные черные
-					дыры, собственно, и являются основными носителями энтропии Вселенной).
-					Поэтому любая циклическая модель Вселенной должна сопровождаться
-					моделью эволюции черных дыр. Данная статья
-					посвящена простой модели эволюции черных
-					дыр и нейтронных звезд в классической модели
-					осциллирующей Вселенной. Отметим, что изучение
-					популяции черных дыр стало особенно актуальной
-					темой в последние годы.
-				</P>
-				<P>
-					В 2015–2019 годах гравитационно-волновая
-					обсерватория LIGO обнаружила многочисленную
-					популяцию черных дыр 8–80 M⊙, с типичной
-					массой 30 M⊙ (Abbott et al. 2016). Сразу были высказаны предположения, что эти многочисленные
-					SBH могут объяснить феномен темной материи
-					(Bird et al. 2016, Kashlinsky 2016). В статьях
-					Clesse and Garcı´ a-Bellido (2017; 2018), Garcia-Bellido (2018) суммируются доводы в пользу
-					такой гипотезы и доказывается, что LIGO из-за наблюдательной селекции фиксирует лишь
-					самые тяжелые черные дыры звездных масс, а на
-					самом деле максимум числа черных дыр должен
-					приходится на массы в несколько масс солнца.
-					Carr and Silk (2018) тоже полагают, что темная
-					материя может целиком состоять из черных дыр.
-					Гипотеза, объясняющая феномен темной материи с
-					помощью SBH, привлекательна, но она предполагает большое количество таких черных дыр — 1023,
-					что на три порядка больше, чем следует из теорий
-					звездной эволюции. По мнению других авторов,
-					черные дыры могут составлять лишь часть общей
-					массы темной материи, но даже если их всего
-					примерно 10%, то такое число SBH на два порядка
-					превосходит теоретическую оценку.
-				</P>
-				<P>
-					В центре каждой галактики находятся сверхмассивные черные дыры (SMBH) с массами
-					105–1010 M⊙. Например, в центре нашей Галактики находится черная дыра в 4 × 106 M⊙, а в центре
-					Туманности Андромеды — дыра с массой порядка
-					108 M⊙ (Bender et al. 2005, Cherepashchuk 2014).
-					Общее количество SMBH во Вселенной можно
-					оценить по количеству крупных галактик как 1011,
-					но их образование в наблюдаемом количестве и
-					на самых ранних этапах расширения Вселенной
-					является нерешенной проблемой. Раньше общепринятой считалась модель, по которой темная
-					материя на ранней стадии Вселенной образовывала
-					из-за неустойчивости Джинса гравитационно-связанные скопления, в которых затем скапливались барионы (Bullock and Boylan-Kolchin 2017). В
-					зависимости от массы скопления темной материи,
-					из этих барионных сгустков возникали шаровые
-					скопления звезд, галактики-карлики и массивные
-					галактики — спиральные или эллиптические. После чего в галактиках образовывались массивные
-					черные дыры от тысяч до миллиардов масс солнца.
-					Наличие супермассивных черных дыр на ранних
-					этапах расширения Вселенной, до возникновения
-					массивных галактик, указывает на альтернативный
-					сценарий, набирающий популярность в последние
-					годы.
-				</P>
+
+				<Blockquote AutoLayout Direction='Vertical' AlignX='Center'>
+					<Div Class='Text'>Умение стрелять в голову</Div>
+					<HR>
+					<Div Class='Author'>Даниил "Zeus" Тесленко</Div>
+				</Blockquote>
 			</Div>
 		</Article>
 	</Body>
 
-	<Script Src='Library/UI/Components/Icon/custom-icon.js'></Script>
+	<Script Src='Library/UI/Components/Icon/Icon.js'></Script>
 </HTML>
