--- a/Article.html
+++ b/Article.html
@@ -2,7 +2,7 @@
 
 <HTML AutoLayout Direction='Vertical' Width='Fill' Height='Fill' Lang='ru-RU'>
 	<Head>
-		<Title>Черные дыры и нейтронные звезды в осциллирующей вселенной</Title>
+		<Title>Коммуникация</Title>
 
 		<Link Rel='Icon' Href='https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.2.0/counter-strike.svg'>
 		<Meta Charset='UTF-8'>
