--- a/index.html
+++ b/index.html
@@ -1,64 +1,1 @@
-<!DOCTYPE HTML>
-
-<HTML AutoLayout Direction='Vertical' Width='Fill' Height='Fill' Lang='ru-RU'>
-	<Head>
-		<Title>Введение в соревновательный Counter-Strike</Title>
-
-		<Link Rel='Icon' Href='https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.2.0/counter-strike.svg'>
-		<Meta Charset='UTF-8'>
-		<Meta Name='Viewport' Content='width=device-width, initial-scale=1, shrink-to-fit=no'>
-
-		<Link Rel='Stylesheet' Href='Library/UI/Basic/AutoLayout.css'>
-		<Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'>
-		<Link Rel='Stylesheet' Href='Library/UI/Components/Buttons/Text.css'>
-		<Link Rel='Stylesheet' Href='Library/UI/Basic/Fonts.css'>
-		<Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'>
-		<Link Rel='Stylesheet' Href='Common.css'>
-		<Link Rel='Stylesheet' Href='index.css'>
-
-		<Link Rel='Preconnect' Href='https://fonts.googleapis.com'>
-		<Link Rel='Preconnect' Href='https://fonts.gstatic.com' Crossorigin>
-		<Link Href='https://fonts.googleapis.com/css?family=Google+Sans:500|Playfair+Display:400|Lora:400,500' Rel='Stylesheet'>
-	</Head>
-
-	<Body AutoLayout Direction='Vertical' Width='Fill' Height='Fill'>
-		<Header AutoLayout Direction='Horizontal' Width='Fill' Height='Fit' AlignX='End'>
-			<A Href='Authors'>Авторы</A>
-		</Header>
-
-		<Main AutoLayout Direction='Vertical' Width='Fill' Height='Fill' AlignX='Center' AlignY='Center'>
-			<H1>Введение в соревновательный Counter-Strike</H1>
-
-			<Div ID='Features' AutoLayout Direction='Horizontal' AlignX='Center'><Span Class='Feature' AutoLayout Direction='Vertical' Width='Fit' Height='Fit'>
-					<Div AutoLayout Direction='Vertical'>
-						<H2>Правильный подход к тренировке</H2>
-						<Div>Всё для улучшения индивидуальных навыков</Div>
-					</Div>
-
-					<A Href='Article' Class='Text Main'>Читать</A>
-					</Span><Span Class='Feature' AutoLayout Direction='Vertical' Width='Fit' Height='Fit'>
-					<Div AutoLayout Direction='Vertical'>
-						<H2>Разбор основных карт</H2>
-						<Div>Inferno, Dust II, Mirage</Div>
-					</Div>
-
-					<A Href='Article' Class='Text Main'>Читать</A>
-					</Span><Span Class='Feature' AutoLayout Direction='Vertical' Width='Fit' Height='Fit'>
-					<Div AutoLayout Direction='Vertical'>
-						<H2>Эффективный стиль игры</H2>
-						<Div>Всё для победы на FaceIt, в MM и Wingman</Div>
-					</Div>
-
-					<A Href='Article' Class='Text Main'>Читать</A>
-					</Span><Span Class='Feature' AutoLayout Direction='Vertical' Width='Fit' Height='Fit'>
-					<Div AutoLayout Direction='Vertical'>
-						<H2>Библиотека</H2>
-						<Div>Ссылки, много ссылок</Div>
-					</Div>
-
-					<A Href='Article' Class='Text Main'>Читать</A>
-				</Span>
-			</Div>
-		</Main>
-	</Body>
-</HTML>
+<!DOCTYPE HTML><HTML AutoLayout Direction='Vertical' Width='Fill' Height='Fill' Lang='ru-RU'><Head><Title>Введение в соревновательный Counter-Strike</Title><Link Rel='Icon' Href='https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.2.0/counter-strike.svg'><Meta Charset='UTF-8'><Meta Name='Viewport' Content='width=device-width, initial-scale=1, shrink-to-fit=no'><Link Rel='Manifest' Href='Manifest.webmanifest'><Link Rel='Stylesheet' Href='index.css'><Link Rel='Stylesheet' Href='Library/UI/Basic/AutoLayout.css'><Link Rel='Stylesheet' Href='Library/UI/Basic/Constants.css'><Link Rel='Stylesheet' Href='Library/UI/Basic/Fonts.css'><Link Rel='Stylesheet' Href='Common.css'><Link Rel='Preconnect' Href='https://fonts.googleapis.com'><Link Rel='Preconnect' Href='https://fonts.gstatic.com' Crossorigin><Link Href='https://fonts.googleapis.com/css?family=Google+Sans:500|Playfair+Display:400|Lora:400,500' Rel='Stylesheet'></Head><Body AutoLayout Direction='Vertical' Width='Fill' Height='Fill'><Header AutoLayout Direction='Horizontal' Width='Fill' Height='Fit' AlignX='End'><A Href='Authors'>Авторы</A></Header><Main AutoLayout Direction='Vertical' Width='Fill' Height='Fill' AlignX='Center' AlignY='Center'><H1>Введение в соревновательный Counter-Strike</H1><Div ID='Features' AutoLayout Direction='Horizontal' AlignX='Center'><Div Class='Feature' AutoLayout Direction='Vertical' Width='Fit' Height='Fill'><Div AutoLayout Direction='Vertical'><H2>Коммуникация</H2><Div>Всё о половине игры</Div></Div><A Href='Article-Коммуникация' Class='Text Main'>Читать</A></Div></Div></Main></Body></HTML>
